feat: responsive signup page

--- a/src/components/signUp/signUp.scss
+++ b/src/components/signUp/signUp.scss
@@ -1,13 +1,18 @@
 $indigo: #232b6a;
 
 .signup {
-  width: 100vw;
-  height: 100vh;
   color: $indigo;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .signup-header {
   color: $indigo;
+  position: absolute;
+  top: 10px;
+  right: 0;
   font-weight: 600;
   display: flex;
   justify-content: flex-end;
@@ -18,10 +23,17 @@ $indigo: #232b6a;
     cursor: pointer;
     text-decoration: underline;
   }
+
+  @media (max-width: 768px) {
+    margin: 0 auto 0 auto;
+    position: relative;
+    padding: 0;
+  }
 }
 
 .signup-form {
   width: 480px;
+  height: 100vh;
   margin: 0 auto 0 auto;
   padding: 64px 0px 96px 0px;
   gap: 32px;
@@ -44,5 +56,24 @@ $indigo: #232b6a;
       color: $indigo;
       font-weight: 600;
     }
+
+    @media (max-width: 768px) {
+      width: 200px;
+    }
+  }
+
+  @media (max-width: 768px) {
+    justify-content: center;
+    width: 250px;
+    padding: 0;
+    margin: 0;
+  }
+}
+
+.signup-h1 {
+  font-size: 64px;
+
+  @media (max-width: 768px) {
+    font-size: 42px;
   }
 }
