--- a/src/components/signUp/signUp.scss
+++ b/src/components/signUp/signUp.scss
@@ -6,6 +6,8 @@ $indigo: #232b6a;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
 
 .signup-header {
