--- a/src/layout/footer.scss
+++ b/src/layout/footer.scss
@@ -5,9 +5,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  left: 0;
-  bottom: 10px;
+  position: fixed;
+  bottom: 0;
 
   @media (max-width: 768px) {
     font-size: 12px;
