--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 html,
 body {
   margin: 0;
-  padding-bottom: 20px;
+  padding: 0;
   height: 100vh;
   box-sizing: border-box;
   overflow-x: hidden;
