--- a/src/layout/footer.scss
+++ b/src/layout/footer.scss
@@ -1,7 +1,10 @@
+$indigo: #232b6a;
+
 .footer {
-  color: #232b5a;
+  color: $indigo;
   width: 100%;
   height: 20px;
+  font-weight: 600;
   display: flex;
   align-items: center;
   justify-content: center;
