style: landscape support for mobile

--- a/src/components/signUp/signUp.scss
+++ b/src/components/signUp/signUp.scss
@@ -12,6 +12,12 @@ $carmine-red: #ff0033;
   width: 100vw;
   background-image: url('https://wallpapercave.com/wp/wp4786592.jpg');
   background-size: cover;
+
+  @media (max-width: 768px) and (orientation: landscape) {
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 600px;
+  }
 }
 
 .signup-header {
