--- a/src/layout/footer.scss
+++ b/src/layout/footer.scss
@@ -1,4 +1,5 @@
 $indigo: #232b6a;
+$purple-navy: #50578d;
 
 .footer {
   color: $indigo;
@@ -13,5 +14,6 @@ $indigo: #232b6a;
 
   @media (max-width: 768px) {
     font-size: 12px;
+    color: $purple-navy;
   }
 }
